agregar: retoques la cada una de las secciones agregar: modelos al admin

--- a/app/apps/pages/templates/partials/partial_contact.html
+++ b/app/apps/pages/templates/partials/partial_contact.html
@@ -32,7 +32,7 @@
     /* Sección izquierda: Información visual y de contacto */
     .contact-left {
       flex: 1 1 400px;
-      background-color: #0d47a1;
+      background-color: #2d2742;
       color: #fff;
       padding: 2rem;
       display: flex;
