--- a/app/apps/pages/templates/partials/partial_hero.html
+++ b/app/apps/pages/templates/partials/partial_hero.html
@@ -2,7 +2,7 @@
 <section class="d-flex flex-column background-container" id="hero-animation">
     <div class="dynamic-background"></div>
     <!-- Se asigna padding-bottom: 10px para dejar el espacio deseado -->
-    <div id="landingHero" class="section-py pt-0" style="padding-bottom: 10px; z-index: 2;">
+    <div id="landingHero" class="section-py pt-0" style="z-index: 2;">
       <div class="container">
         <!-- Versión para Desktop -->
         <div id="desktopHero" class="section-py d-none d-md-block">
