--- a/app/apps/pages/templates/partials/partial_benefits.html
+++ b/app/apps/pages/templates/partials/partial_benefits.html
@@ -1,25 +1,24 @@
-<section id="benefits" class="py-5 text-white">
-    <div class="container text-center">
-      <title class="display-5">
-        AHORRA TIEMPO Y DINERO CON NOSOTROS.
-      </title>
-      
-      <subttitle class="display-6">
-        Empieza a fortalecer tu presencia en el mercado y cuenta con el respaldo de nuestro equipo especializado.
-      </subttitle>
-      <div class="row">
-        {% for feature in features_3 %}
-        <div class="col-md-6 col-sm-12 mb-4">
-          <div class="d-flex flex-column align-items-center">
-            <!-- Título y subtítulo de la feature -->
-            <h5 class="fw-bold">{{ feature.card_title }}</h5>
-            <p class="text-center">{{ feature.card_text }}</p>
-            <!-- Ícono que ahora se muestra debajo -->
-            <i class="fas fa-{{ feature.card_icon }} fa-3x mb-3"></i>
-          </div>
+<section id="benefits" class="py-5 text-white" style="background-color: #2d2742;">
+  <div class="container text-center">
+    <title class="display-5">
+      AHORRA TIEMPO Y DINERO CON NOSOTROS.
+    </title>
+    
+    <subttitle class="display-6">
+      Empieza a fortalecer tu presencia en el mercado y cuenta con el respaldo de nuestro equipo especializado.
+    </subttitle>
+    <div class="row">
+      {% for feature in features_3 %}
+      <div class="col-md-6 col-sm-12 mb-4">
+        <div class="d-flex flex-column align-items-center">
+          <!-- Título y subtítulo de la feature -->
+          <h5 class="fw-bold">{{ feature.card_title }}</h5>
+          <p class="text-center">{{ feature.card_text }}</p>
+          <!-- Ícono que ahora se muestra debajo -->
+          <i class="fas fa-{{ feature.card_icon }} fa-3x mb-3"></i>
         </div>
-        {% endfor %}
       </div>
+      {% endfor %}
     </div>
-  </section>
-  
+  </div>
+</section>
